--- a/css/index.css
+++ b/css/index.css
@@ -95,6 +95,10 @@ icon[r]{
 	background-image: url(../icons/r.png);
 }
 
+.nowrap{
+	white-space: nowrap;
+}
+
 p > img{
 	width: 100%;
 	border: 1px solid #ddd;
@@ -222,4 +226,3 @@ sub{
 .sharable_icon[em]{
 	background-position: -200% 0;
 }
-
